katars/tests/snaps/snapshots/snap_errors__variant_wrong_arity.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"Opt[Int].Val(1, 2)\")"
---
Error: 'Val' expects 1 argument(s), got 2
   ╭─[<test>:1:1]
   │
 1 │ Opt[Int].Val(1, 2)
   │ ─┬─  
   │  ╰─── 'Val' expects 1 argument(s), got 2
───╯
